--- a/index_old.html
+++ b/index_old.html
@@ -9,6 +9,6 @@
 <body>
     <id id="app"></id>
     <script src="https://unpkg.com/vue"></script>
-    <script src="./index2.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
