--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://rawgit.com/designstem/framework/master/style.css">
+    <link rel="stylesheet" href="https://designstem.github.io/framework/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 <body>
