--- a/step1.html
+++ b/step1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <id id="app"></id>
-    <script src="./vendor/vue.js"></script>
+    <script src="https://designstem.github.io/framework/vendor.js"></script>
     <script src="./step1.js" type="module"></script>
 </body>
 </html>
