--- a/step5.html
+++ b/step5.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <id id="app"></id>
-    <script src="./vendor/vue.js"></script>
+    <script src="https://designstem.github.io/framework/vendor.js"></script>
     <script src="./step5.js" type="module"></script>
 </body>
 </html>
